// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should handle count when it is 0 properly 1`] = `
Object {
  "content": "You don't have any new notifications. Well done!",
  "title": "Pivotal Tracker",
  "type": "Simple",
}
`;

exports[`it should handle count when it is 1 properly 1`] = `
Object {
  "content": "You have 1 new notification",
  "title": "Pivotal Tracker",
  "type": "Simple",
}
`;

exports[`it should handle count when it is more than 1 properly 1`] = `
Object {
  "content": "You have 10 new notifications",
  "title": "Pivotal Tracker",
  "type": "Simple",
}
`;
